
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CHECKPTR (int ) ;
 int E_INVALIDARG ;
 int S_OK ;
 int UD2T (int,int,int,int,int,int,int,int,int,int,int ,double) ;
 int VAR_DATEVALUEONLY ;
 int VAR_TIMEVALUEONLY ;
 int VarDateFromUdate ;

__attribute__((used)) static void test_VarDateFromUdate(void)
{
  CHECKPTR(VarDateFromUdate);
  UD2T(1,1,1980,0,0,0,0,2,1,0,S_OK,29221.0);
  UD2T(2,1,1980,0,0,0,0,3,2,0,S_OK,29222.0);
  UD2T(2,1,1980,0,0,0,0,4,5,0,S_OK,29222.0);
  UD2T(31,12,1990,0,0,0,0,0,0,0,S_OK,33238.0);
  UD2T(31,12,90,0,0,0,0,0,0,0,S_OK,33238.0);
  UD2T(30,12,1899,0,0,0,0,6,364,0,S_OK,0.0);
  UD2T(1,1,100,0,0,0,0,0,0,0,S_OK,-657434.0);
  UD2T(31,12,9999,0,0,0,0,0,0,0,S_OK,2958465.0);
  UD2T(1,1,10000,0,0,0,0,0,0,0,E_INVALIDARG,0.0);
  UD2T(1,1,-10000,0,0,0,0,0,0,0,E_INVALIDARG,0.0);

  UD2T(30,12,1899,0,0,0,0,0,0,0,S_OK,0.0);
  UD2T(30,12,1899,0,0,0,999,0,0,0,S_OK,0.0);

  UD2T(1,1,1980,18,1,16,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,300,1980,18,1,16,0,2,1,0,S_OK,38322.75087962963);
  UD2T(300,1,1980,18,1,16,0,2,1,0,S_OK,29520.75087962963);
  UD2T(0,1,1980,42,1,16,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,1,1980,17,61,16,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,1,1980,18,0,76,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,-300,1980,18,1,16,0,2,1,0,S_OK,20059.75087962963);
  UD2T(-300,1,1980,18,1,16,0,2,1,0,S_OK,28920.75087962963);
  UD2T(3,1,1980,-30,1,16,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,1,1980,20,-119,16,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,1,1980,18,3,-104,0,2,1,0,S_OK,29221.75087962963);
  UD2T(1,12001,-1020,18,1,16,0,0,0,0,S_OK,29221.75087962963);
  UD2T(1,-23,1982,18,1,16,0,0,0,0,S_OK,29221.75087962963);
  UD2T(-59,3,1980,18,1,16,0,0,0,0,S_OK,29221.75087962963);
  UD2T(1,1,0,0,0,0,0,0,0,0,S_OK,36526);
  UD2T(0,0,1980,0,0,0,0,0,0,0,S_OK,29189);
  UD2T(0,1,1980,0,0,0,0,2,1,0,S_OK,29220.0);
  UD2T(-1,1,1980,18,1,16,0,0,0,0,S_OK,29219.75087962963);
  UD2T(1,1,-1,18,1,16,0,0,0,0,S_OK,36161.75087962963);
  UD2T(1,-1,1980,18,1,16,0,0,0,0,S_OK,29160.7508796296);
  UD2T(1,13,1980,0,0,0,0,2,1,0,S_OK,29587.0);


  UD2T(25,12,1899,6,0,0,0,1,359,0,S_OK,-5.25);
  UD2T(25,12,1899,23,59,59,0,1,359,0,S_OK,-5.9999884259259);

  UD2T(26,12,1899,0,0,0,0,2,360,0,S_OK,-4.0);


  UD2T(30,12,1899,6,0,0,0,6,364,0,S_OK,0.25);

  UD2T(1,1,1980,18,1,16,0,2,1,VAR_TIMEVALUEONLY,S_OK,0.7508796296296296);
  UD2T(1,1,1980,18,1,16,0,2,1,VAR_DATEVALUEONLY,S_OK,29221.0);
  UD2T(25,12,1899,6,0,0,0,1,359,VAR_TIMEVALUEONLY,S_OK,0.25);
  UD2T(25,12,1899,6,0,0,0,1,359,VAR_DATEVALUEONLY,S_OK,-5.0);
  UD2T(1,-1,1980,18,1,16,0,0,0,VAR_TIMEVALUEONLY|VAR_DATEVALUEONLY,S_OK,0.7508796296296296);
}
